syntax="proto3";
package simple_cache;

option php_namespace="Dpl\\SimpleCache";
option php_metadata_namespace="Dpl\\SimpleCache\\Meta";

message SetRequest {
  string key = 1;
  string value = 2;
}

message SetResponse {
  bool success = 1;
}

message DelRequest {
  string key = 1;
}

message DelResponse {
  bool success = 1;
}

message GetRequest {
  string key = 1;
}

message GetResponse {
  string key = 1;
  string value = 2;
}

service SimpleCache {
  rpc Set(SetRequest) returns (SetResponse);
  rpc Del(DelRequest) returns (DelResponse);
  rpc Get(GetRequest) returns (GetResponse);
}
